# 4-Month-AI-Journey

./: README.md  pyproject.toml
01_Agentic_Workflows/: Day_01_LLM_Fundamentals.md  Day_01_LangChain_Prototypes.ipynb  Day_01_WorkFlows_Patterns.md  Day_02_Tool_Calling_Mechanics.md  demo.ipynb
